ops/k8s/hormuz-brief/overlays/prod/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hormuz-brief
  annotations:
    acme.cert-manager.io/http01-edit-in-place: "true"
    cert-manager.io/cluster-issuer: letsencrypt-prod
    cert-manager.io/issue-temporary-certificate: "true"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
spec:
  ingressClassName: nginx
  tls:
    - secretName: hormuz-brief-tls
      hosts:
        - quan-hong-chan.lol
        - www.quan-hong-chan.lol
  rules:
    - host: quan-hong-chan.lol
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: hormuz-brief
                port:
                  number: 80
    - host: www.quan-hong-chan.lol
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: hormuz-brief
                port:
                  number: 80
